[package]
name = "image-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.2"
webp = '0.2'
axum = {version = "0.6", features = ["http2"], optional = true }
poem = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0" 
dashmap = "5.3.3"
tracing = "0.1.34"
http = "0.2"

[dev-dependencies]
tokio = { version = "1.2", features = ["macros", "rt-multi-thread", "sync"] }